--- a/HBRPractNet5/Views/Productos/Index.cshtml
+++ b/HBRPractNet5/Views/Productos/Index.cshtml
@@ -2,7 +2,7 @@
 @using ProyectoPropietaria.Resources;
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = ProyectoPropietaria.Resources.StringResource.Products;
 }
 
 <h1>@StringResource.Products</h1>
