--- a/HBRPractNet5/Views/Usuarios/Index.cshtml
+++ b/HBRPractNet5/Views/Usuarios/Index.cshtml
@@ -2,7 +2,7 @@
 @using ProyectoPropietaria.Resources;
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = ProyectoPropietaria.Resources.StringResource.User;
 }
 
 @await Component.InvokeAsync("UsuariosComponent")
