--- a/HBRPractNet5/Views/Categorias/Index.cshtml
+++ b/HBRPractNet5/Views/Categorias/Index.cshtml
@@ -2,7 +2,7 @@
 @using ProyectoPropietaria.Resources;
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = ProyectoPropietaria.Resources.StringResource.Categories;
 }
 
 <h1>@StringResource.Categories</h1>
