--- a/HBRPractNet5/Views/Language/Index.cshtml
+++ b/HBRPractNet5/Views/Language/Index.cshtml
@@ -2,10 +2,11 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = ProyectoPropietaria.Resources.StringResource.Language;
 }
 
 
-<h2>@ProyectoPropietaria.Resources.StringResource.Create</h2>
+<h2>@ProyectoPropietaria.Resources.StringResource.Language</h2>
 
 <ul>
     <li>@Html.ActionLink("English", "Change", "Language", new { LanguageAbbrevation = "en" }, null)</li>
